--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 allprojects {
     apply plugin: "eclipse"
 
-    version = '1.0'
+    version = "0.1"
     ext {
         appName = "Starflight"
         gdxVersion = '1.11.0'
